--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Landing Page</title>
+        <title>Legal Consulting, Corporate Law | Winifred Furstein</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
